--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "description": "",
   "main": "./backend/index.js",
   "scripts": {
-    "dev": "nodemon ./backend/index.js --exec babel-node"
+    "frontend": "cd frontend && yarn start",
+    "server": "cross-env NODE_ENV=development nodemon ./backend/index.js --exec babel-node",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn frontend\"",
+    "start": "cross-env NODE_ENV=production node ./backend/index.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "concurrently": "^5.0.0",
     "nodemon": "^1.19.4"
   }
 }
